--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
 /node_modules
 /.pnp
@@ -18,19 +20,9 @@
 # production
 /build
 
-# env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-!.env.example
-
 # misc
 .DS_Store
-Thumbs.db
 *.pem
-*.local
 
 # debug
 npm-debug.log*
@@ -38,13 +30,11 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
+# env files (can opt-in for committing if needed)
+.env*
+
 # vercel
 .vercel
-
-# editor
-.vscode/
-.idea/
-*.swp
 
 # typescript
 *.tsbuildinfo
