--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,31 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+node_modules
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Build output
+dist
+dist-ssr
 
-# testing
-/coverage
+# Vite cache
+.vite
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Env files
+.env
+.env.*
+!.env.example
 
-# vercel
-.vercel
+# OS / IDE
+.DS_Store
+.idea
+.vscode
 
-# typescript
+# Coverage
+coverage
+
+# TypeScript
 *.tsbuildinfo
-next-env.d.ts
