--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "@figma/my-make-file",
+  "name": "wesfolio",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "description": "Personal portfolio site",
   "type": "module",
   "scripts": {
     "build": "vite build",
     "dev": "vite"
   },
   "dependencies": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "lucide-react": "0.487.0",
     "motion": "12.23.24",
     "react-icons": "^5.5.0"
@@ -21,18 +24,7 @@
     "tailwindcss": "4.1.12",
     "vite": "^6.4.1"
   },
-  "peerDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "18.3.1"
-  },
-  "peerDependenciesMeta": {
-    "react": {
-      "optional": true
-    },
-    "react-dom": {
-      "optional": true
-    }
-  },
+  "license": "UNLICENSED",
   "pnpm": {
     "overrides": {
       "vite": "6.3.5"
